# task4cpp

./: Add_new_symbol.cpp  Add_new_symbol.h  Array_size.cpp  Array_size.h  CMakeLists.txt  Create_struct.cpp  Create_struct.h  Create_total_list.cpp  Create_total_list.h  List_Str.h  Print_structure.cpp  Print_structure.h  Readfile.cpp  Readfile.h  Search_element.cpp  Search_element.h  Write_total_structure.cpp  Write_total_structure.h  additional_list.txt  additional_symbol.txt  main.cpp  main_list.txt
