cmake_minimum_required(VERSION 3.23)
project(task4cpp)

set(CMAKE_CXX_STANDARD 17)

add_executable(task4cpp main.cpp List_Str.h Readfile.h Readfile.cpp Create_struct.h Create_struct.cpp Create_total_list.h Create_total_list.cpp Search_element.h Search_element.cpp Print_structure.h Print_structure.cpp Write_total_structure.h Write_total_structure.cpp)
